--- a/Structure/CSS_layout.css
+++ b/Structure/CSS_layout.css
@@ -41,3 +41,16 @@ a:hover {
   color: #0000FF;
 }
 
+.teammate {
+  display: inline-block;
+}
+
+figcaption {
+  background-color: black;
+  color: white;
+  font-style: italic;
+  padding: 2px;
+  text-align: center;
+}
+
+
